Resolve errors with merge logic